--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
