--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
 
     "baseUrl": "./src/",
     "paths": {
+      "@src/*": ["*"],
       "@routes/*": ["routes/*"],
       "@components/*": ["components/*"],
       "@components": ["components"],
